[package]
name = "ap4s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding="2.1.2"
regex = "1.6.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"
webbrowser = "0.8.2"
once_cell = "1.16.0"
text_io = "0.1.12"
url = "2.3.1"
anyhow = "1.0.66"

# openssl = { version = "0.10", features = ["vendored"] }
